bb-misc: fix toList java version issue.